# Eric-Graham-1987-Juggler-Raytracer-1.0-

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  Raytracer_1987_Graham_Source_Code.adf.7z  vcpkg.json
Raytracer_1987_Graham_Source_Code/: .info  Trashcan.info  dos.bmap.info  dragon  ele  graphics.bmap.info  intuition.bmap  intuition.bmap.info  movie  movie.data  movie.info  movie2  movie2.data  movie2.info  raytrace.BAK  raytrace.a.info  rt1.c  ss  ssg
media/: juggler.avi  movie.webm  movie2.webm
src/: emulate-amiga.c  rt.h  rt1.c  rt2.c  rt3.c
src/exec/: exec.h  types.h
src/intuition/: intuition.h
tools/: jug2tga-README.md  jug2tga.py  ss-convert-README.md  ss-convert.py
